added about, contact and edited stylesheet

--- a/index.html
+++ b/index.html
@@ -5,12 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="styslesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Website for Beginners</title>
 </head>
 <body>
-    <h1>Day 8</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, modi doloremque, id sequi quidem ducimus reprehenderit 
-        fuga perspiciatis possimus nam molestiae velit itaque autem culpa aliquam nemo qui hic earum.</p>
+    <div class="container">
+    <header>
+        <h1>Day 8 column</h1>
+    </header>
+
+   
+    <nav>
+
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+
+    </nav>
+
+    <main class="row">
+        <div class="columns one">
+            <h2>column 1</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi sequi dolorem veritatis omnis sint odio dolores saepe necessitatibus ipsum. 
+                Quisquam tempora odio quae, repellendus eaque enim numquam natus dolorem commodi.</p>
+        </div>
+
+        <div class="columns two">
+            <h2>column 2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi sequi dolorem veritatis omnis sint odio dolores saepe necessitatibus ipsum. 
+                Quisquam tempora odio quae, repellendus eaque enim numquam natus dolorem commodi.</p>
+        </div>
+
+        <div class="columns three">
+            <h2>column 3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi sequi dolorem veritatis omnis sint odio dolores saepe necessitatibus ipsum. 
+                Quisquam tempora odio quae, repellendus eaque enim numquam natus dolorem commodi.</p>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2022</p>
+    </footer>
+
+    </div>
+
 </body>
 </html>
